Add Spark implementation